--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "node-sass": "^4.13.1",
+    "react-icons": "^3.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
