--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
 		"react-icons": "^3.9.0",
-		"react-parallax": "^3.0.3",
+		"react-scroll-parallax": "^2.3.2",
 		"react-particles-js": "^2.7.1",
 		"react-scripts": "3.4.0",
 		"typescript": "~3.7.2"
