--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-scroll-parallax": "^2.3.2",
 		"react-particles-js": "^2.7.1",
 		"react-scripts": "3.4.0",
+		"react-anchor-link-smooth-scroll": "^1.0.12",
 		"typescript": "~3.7.2"
 	},
 	"scripts": {
