--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-particles-js": "^2.7.1",
 		"react-scripts": "3.4.0",
 		"react-anchor-link-smooth-scroll": "^1.0.12",
-		"typescript": "~3.7.2"
+		"typescript": "~3.7.2",
+		"emailjs-com": "^2.4.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
